fix: Match score-to-name gap on both sides
- Reset #p1Wrapper to 348px
- Reset #p2Wrapper to 1216px
- Adjust #p2Score to 1576px for 12px gap on both sides

--- a/_overlays/css/style.scss
+++ b/_overlays/css/style.scss
@@ -43,11 +43,11 @@ body {
   }
 
   #p1Wrapper {
-    left: 360px;
+    left: 348px;
   }
 
   #p2Wrapper {
-    left: 1226px;
+    left: 1216px;
   }
 
   .scores {
@@ -67,7 +67,7 @@ body {
   }
 
   #p2Score {
-    left: 1582px;
+    left: 1576px;
   }
 
   #round {
